--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "dependencies": {
     "axios": "0.24.0",
     "discord.js": "13.3.1",
-    "dotenv": "10.0.0"
+    "dotenv": "10.0.0",
+    "open": "^8.4.0"
   },
   "devDependencies": {
     "eslint": "^8.5.0",
