--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "axios": "0.24.0",
     "discord.js": "13.3.1",
     "dotenv": "10.0.0",
-    "open": "^8.4.0"
+    "open": "^8.4.0",
+    "follow-redirects": ">=1.14.7"
   },
   "devDependencies": {
     "eslint": "^8.5.0",
