--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "type": "module",
   "dependencies": {
+    "array-shuffle": "^3.0.0",
     "axios": "0.24.0",
     "discord.js": "13.3.1",
     "dotenv": "10.0.0",
-    "open": "^8.4.0",
-    "follow-redirects": ">=1.14.7"
+    "follow-redirects": ">=1.14.7",
+    "open": "^8.4.0"
   },
   "devDependencies": {
     "eslint": "^8.5.0",
